--- a/about.html
+++ b/about.html
@@ -11,10 +11,10 @@ image: https://source.unsplash.com/BcoGknSqlDc/2000x1322?a=.png
 			<p class="subtext editable">We have an extremely talented team whose sole goal is to bring you closer to the people around you.</p>
 		</div>
 	</div>
-	<div class="learn-more"><a href="#member">Members<span class="arrow"> &#x25BC;</span></a></div>
+	<div class="learn-more"><a href="#member">Members<span class="arrow">&#x25BC;</span></a></div>
 </section>
 
-<section class="pad" id="member">
+<section class="pad">
 	<div class="container">
 		<p class="editor-link"><a href="cloudcannon:collections/_staff_members" class="btn"><strong>&#9998;</strong> Manage Staff Members</a></p>
 		<ul class="staff">
