--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@ image: https://source.unsplash.com/BcoGknSqlDc/2000x1322?a=.png
 	<div class="learn-more"><a href="#member">Members<span class="arrow">&#x25BC;</span></a></div>
 </section>
 
-<section class="pad">
+<section class="pad" id="member">
 	<div class="container">
 		<p class="editor-link"><a href="cloudcannon:collections/_staff_members" class="btn"><strong>&#9998;</strong> Manage Staff Members</a></p>
 		<ul class="staff">
