--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@ image: https://source.unsplash.com/WNAO036c6FM/2000x1322?a=.png
 <section class="pad" id="contact">
 	<div class="text-container contact-box">
 		<form action="{{ site.baseurl }}/contact-success/" method="post" class="contact-form">
-			<input type="hidden" name="_to" value="support@cloudcannon.com">
+			<input type="hidden" name="_to" value="ds.choi@godsfingers.kr">
 			<input type="text" name="_gotcha" style="display: none;">
 
 			<label for="name">Name</label>
@@ -46,16 +46,6 @@ image: https://source.unsplash.com/WNAO036c6FM/2000x1322?a=.png
 		</div>
 	</div>
 </section>
-
-<!-- * Daum 지도 - 지도퍼가기 -->
-<!-- 1. 지도 노드 -->
-<div id="daumRoughmapContainer1548337279773" class="root_daum_roughmap root_daum_roughmap_landing"></div>
-
-<!--
-	2. 설치 스크립트
-	* 지도 퍼가기 서비스를 2개 이상 넣을 경우, 설치 스크립트는 하나만 삽입합니다.
--->
-<script charset="UTF-8" class="daum_roughmap_loader_script" src="http://dmaps.daum.net/map_js_init/roughmapLoader.js"></script>
 
 
 <!-- <div class="map" id="map"></div>
