--- a/contact.html
+++ b/contact.html
@@ -21,9 +21,9 @@ image: https://source.unsplash.com/WNAO036c6FM/2000x1322?a=.png
 
 <section class="pad" id="contact">
 	<div class="text-container contact-box">
-		<form action="{{ site.baseurl }}/contact-success/" method="post" class="contact-form">
-			<input type="hidden" name="_to" value="ds.choi@godsfingers.kr">
-			<input type="text" name="_gotcha" style="display: none;">
+		<form action="https://formspree.io/ds.choi@godsfingers.kr" method="post" class="contact-form">
+			<!-- <input type="hidden" name="_to" value="ds.choi@godsfingers.kr"> -->
+			<!-- <input type="text" name="_gotcha" style="display: none;"> -->
 
 			<label for="name">Name</label>
 			<input type="text" name="name" id="name" placeholder="Enter your name...">
@@ -35,6 +35,7 @@ image: https://source.unsplash.com/WNAO036c6FM/2000x1322?a=.png
 			<textarea name="message" id="message" placeholder="Enter your message..."></textarea>
 
 			<input type="submit" value="Send Message">
+
 		</form>
 
 		<div class="contact-details">
