Modified css, about.html, post contents

--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@ image: https://source.unsplash.com/WNAO036c6FM/2000x1322?a=.png
 			<p class="subtext editable">If you have any questions or queries send us a message and we'll get back to you as soon as we can.</p>
 		</div>
 	</div>
-  	<div class="learn-more"><a href="#contact">Contact<span class="arrow">&#x25BC;</span></a></div>
+  	<div class="learn-more"><a href="#contact">Send Mail<span class="arrow">&#x25BC;</span></a></div>
 </section>
 
 <section class="pad" id="contact">
