--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ bottom_image: https://unsplash.it/2000/1322?a=.png
 			<!-- <div class="cta button alt"><a href="#">Join Now</a></div> -->
 		</div>
 	</div>
-	<div class="learn-more"><a href="#learn-more">Learn more <span class="arrow">&#x25BC;</span></a></div>
+	<div class="learn-more"><a href="#learn-more">Introduce<span class="arrow">&#x25BC;</span></a></div>
 </section>
 
 <div class="content">
