--- a/index.html
+++ b/index.html
@@ -27,11 +27,16 @@ bottom_image: https://unsplash.it/2000/1322?a=.png
 					God’s Fingers는 하나님의 손가락으로써 사회적 기업으로 성장하여 창조의 선하심과 예수 그리스도의 사랑을 세상에 알리는 것이 목표입니다.<br><br>
 					</font>
 					<font size="3">
+					<blockquote>
+					<p>
 					<center>
-						<b>주의 손가락으로 만드신 주의 하늘과 주께서 베풀어 두신 달과 별들을 내가 보오니<br>
-						[시편 8:3]
-						</b>
+					<b>주의 손가락으로 만드신 주의 하늘과 주께서 베풀어 두신<br>
+						달과 별들을 내가 보오니
+					[시편 8:3]
+					</b>
 					</center>
+					</p>
+					</blockquote>
 					</font>
 				</p>
 			</div>
