--- a/index.html
+++ b/index.html
@@ -29,12 +29,8 @@ bottom_image: https://unsplash.it/2000/1322?a=.png
 					<font size="3">
 					<blockquote>
 					<p>
-					<center>
-					<b>주의 손가락으로 만드신 주의 하늘과 주께서 베풀어 두신<br>
-						달과 별들을 내가 보오니
-					[시편 8:3]
-					</b>
-					</center>
+						주의 손가락으로 만드신 주의 하늘과 주께서 베풀어 두신 달과 별들을 내가 보오니
+						[시편 8:3]
 					</p>
 					</blockquote>
 					</font>
