--- a/index.html
+++ b/index.html
@@ -23,16 +23,8 @@ bottom_image: https://unsplash.it/2000/1322?a=.png
 				<h2 class="editable">Introduce</h2>
 				<p class="editable">
 					<font size="4">
-					God’s Fingers는 성남제일교회 청년연합교구 소속 창업동아리로 성경 시편 8편 3절 말씀을 바탕으로 2012년 3월 창립 되었습니다.<br><br>
+					God’s Fingers는 성남제일교회 청년연합교구 소속 창업동아리로 성경말씀 시편 8편 3절 말씀을 바탕으로 2012년 3월 창립 되었습니다.<br><br>
 					God’s Fingers는 하나님의 손가락으로써 사회적 기업으로 성장하여 창조의 선하심과 예수 그리스도의 사랑을 세상에 알리는 것이 목표입니다.<br><br>
-					</font>
-					<font size="3">
-					<blockquote>
-						<p>
-							주의 손가락으로 만드신 주의 하늘과 주께서 베풀어 두신 달과 별들을 내가 보오니
-							<br>- 시편 8:3 -
-						</p>
-					</blockquote>
 					</font>
 				</p>
 			</div>
